@@ -1,3 +1,6 @@
+04-06-2005 <Qball> <Qball@qballcow.nl>	
+	* src/playlist3.c:		Fixed bug that when playlist changes
+	the playlist search doesn't update.
 
 
 02-06-2005 <Qball> <Qball@qballcow.nl>
